--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
     <artifactId>selenium-java</artifactId>
     <version>LATEST</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.17.0</version>
+</dependency>
 
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-api -->
 <dependency>
